# codeine-prototype

./: README.md  app.py  pyproject.toml
codeine/: app.py  chatbot.py  explainer.py
codeine/frontend/: overwrites.py  presets.py  utils.py
notebooks/: agent_test.ipynb  chatbot.ipynb  docs.pkl
notebooks/storage/TinyViT/: docstore.json  index_store.json
